
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MyActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Inspeccion No."
        android:id="@+id/textView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_InspeccionNo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Cliente"
        android:id="@+id/textView2" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_Cliente" />

    <!--<Spinner
        android:id="@+id/Spinner01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />-->



    <Spinner

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:id="@+id/sp_TipoSiembraCodigo"
        android:visibility="gone"
        
        />

    <Spinner

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:id="@+id/sp_TipoSiembra"

        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/profundidadDeSiembraAdecuada"
        android:id="@+id/textViewCondicionesDeSiembra" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/rdProfundidadDeSiembra">

        <RadioButton android:id="@+id/rdProfundidadSi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcionSi"
           />

        <RadioButton android:id="@+id/rdProfundidadNO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcionNo"
            />
    </RadioGroup>

  >



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/alta"
            android:id="@+id/btn_alta"
            android:onClick="alta"
            android:layout_weight="1"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/consulta"
            android:id="@+id/btn_consultar"
            android:onClick="consulta"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/baja"
            android:id="@+id/btn_baja"
            android:onClick="baja"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/modificar"
            android:id="@+id/btn_modificar"
            android:onClick="modificacion"
            android:layout_weight="1" />
    </LinearLayout>




</LinearLayout>